edit dist demo no script

--- a/_posts/2019-09-08-dist-demo.html
+++ b/_posts/2019-09-08-dist-demo.html
@@ -1,7 +1,7 @@
 ---
 title: "A Visualized Distributed Algorithm Playground"
 date: 2019-09-08 10:32:00
-tags: "Algorithms"
+tags: "Distributed System"
 ---
 Play and experiment with your favorite distributed algorithms! Everything visualized.
 
@@ -10,5 +10,5 @@ Play and experiment with your favorite distributed algorithms! Everything visual
 </script>
 
 <noscript>
-    <a href="dist.hanyou.dev">Link: dist.hanyou.dev</a>
+    <p>No script link: <a href="dist.hanyou.dev">dist.hanyou.dev</a></p>
 </noscript>
